content for about us page along with css for flex
this is a basic framework for the about us page with all the appropriate content for each system.

--- a/app/views/index/about_us.html
+++ b/app/views/index/about_us.html
@@ -1,25 +1,211 @@
+<!DOCTYPE html>
+<html>
 <head>
-
+	<link rel="stylesheet" type="text/css" href="\Users\Luran\Documents\GitHub\SolarGators\app\assets\stylesheets\About_us.css">
 	
 </head>
 
 <body>
 
-	<%=link_to 'main.htlm.erb', index_path do %>
-		<%=image_tag Solar-Gators-Logo.PNG title="Solar Gator Home Page"%>
-	<!--reference to each of the other pages-->
-	<%=link_to 'events', index_path do %>
-	<!--reference to each of the other pages-->
-	<%=%>
-	<!--reference to each of the other pages-->
-	<%=%>
+	<div class = "abt_us">
+		<h1> About Us</h1>
+		<p>Solar Gator is a student organization in the University of Florida. 
+		We are driven by passionate, eco-minded students commited to designing, building, and racing a sucessful fully solar-powered vehical.
+		Along the way, we raise awearness of sustainability amongest our peers,community, and ultimatly the world.</p>
+		
+		
+	</div>
+	<div class = "abt_us">
+		<h1>Our History</h1>
+		<p>Solar Gators was founded inittialy in 2011 by Jason Rosen. Jason had a background in solar cars as he was on a high school solar car team in South Florida. 
+		After graduating and coming to the Univeristy of Florida he decided to found the Univeristes first Solar team calling it Solar Gators.
+		Solar Gators first goal was to enter into the Formula Sun Grand Prix in 2013, a high bar for a new team at the time.
+		Ultimatly the team was not able to enter in the 2013 Gran Prix, but rallied and entered the 2014 race in the summer.
+		while the team had a runing car, they fell shrot of the qualification to compete in the competition.
+		After that the team disbanded and the club went dark for two years untill a new group of students filled with their own ambitions and asperations revitalized the team, a new age of Solar Gators begain. 
+		With the help of one of the old Solar Gator members the new team was able to reuse the old chassie, front suspension, steering. 
+		From there they worked quickly, manufacturing all the other system parts in only six weeks.
+		The new Solar Gator team rose above and byond the occasion managing to not only construct a fully functional solar car, but also qualify and race in the 2017 Formula Sun Grand Prix(FSGP).
+		Since then the team has moved further away from their predicesors constructing a new solar car and racing in the 2018 FSGP preforming 11 times better then the previous year.
+		The Solar Gator team is now looking towards the future and hopes to race again in the 2019 FSGP and hopeing to take home a place finish in the competition.
+		</p>
+	</div>
+	<div class = "abt_us">
+	<h1> Our Systems</h1>
+	<p>Our team is orgainzed several systems that are integral to the cars preformence. Each system has it's own lead(s) that are incharge. If you want to learn more about our system leads look at our <a href = "">team</a>.</p>
+	
+	</div>
+	<div class = "system">
+		<div class = "systems">
+		<h2>Aero body</h2>
+		<p>The body subsystem focuses on maximizing the aerodynamic performance of the car through the design of the outer shell.
+		The body itself is separate from the internals and is designed to package all mechanical and electrical components.
+		The body design goes through many iterations to determine the one which one would incur the lowest drag forces.
+		The body team does this through the use of CAD and CFD (computational fluid dynamics) software. 
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Composites</h2>
+		<p>Composites are materials made of two or more constituent materials that serve to elevate its functionality.
+		The composites team is responsible for optimizing all the components in the car that require materials research, design, and testing.
+		Our focus is on making a structurally sound body that is accurate to the CAD design.
+		We have been making continual improvements to the material design, moving from fiberglass to carbon fiber this past year.
+		This improved the overall car weight, but there are still optimizations with ribbing and attachment to the chassis, which we will be working on this semester. 
+		Concurrently, we will be working on material design and testing for the next car, which will race in two years.
+		This will involve working with other subsystems like body and chassis so we stay on schedule and manufacture to their vision.
+		Throughout the process, we will be reaching out to companies who are willing to help us by donating materials, offering general advice on materials research, and coordinating with professors who are willing to give laboratory time to test.
+		This will result in the unique opportunity to layup the entire car body.
+		Being a part of composites gives members the opportunity to not only use their creativity to design a great car, but apply their materials knowledge in hands-on applications.
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Crush Zone</h2>
+		<p>The Crush Zone is a statics subsystem of the solar car that is designed to, if necessary, absorb impact of a collision and protect the driver. 
+		It is attached to the chassis of the vehicle and is comprised of energy absorbing material that serves to protect the driver in case of impacts.
+		The Crush Zone is a necessity in that it is crucial in unfortunate circumstances when accidents happen.
+		The Crush Zone is meant to “crush” under stress and therefore absorb the impact.
+		It is designed to withstand an impact to the driver area. The primary goal is to generate a subsystem in which is effective at providing safety to the driver with as much efficiency as possible; including being lightweight, space efficient, and cost effective. 
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Solar Array</h2>
+		<p>The solar array is comprised of the solar cells and several protective layers that surround the cells. 
+		The purpose of this subsystem is to design, test, and construct the vehicle’s solar array, ultimately upgrading the vehicle from an electric car to a solar-powered car.
+		In this subsystem, we will initially discuss the shortcomings of the previous year’s array that contributed to losses of efficiency.
+		Understanding past imperfections will lead us to research materials and methods to improve the functioning of the new array. 
+		Following the acquisition of materials, we will experiment with different methods of encapsulating the solar cells to maximize efficiency.
+		Once the optimal method is determined, we will encapsulate the modules for the car, allowing time for final testing of the completed car.
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Drive Train</h2>
+		<p>The drivetrain of any vehicle can be described as the system that transfers power from the source of energy to the wheels. 
+		There are many different parts involved with the system, but the general process revolves around several main components that are translating the energy, while the rest of the drivetrain helps transfer that energy throughout the drivetrain system.
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Suspension</h2>
+		<p>The suspension system is a dynamic mechanical system that focuses on connecting the wheels to the chassis.
+		In addition, the suspension acts as a support for the brakes, steering knuckles, and drivetrain. 
+		The purpose of the suspension is to reduce the effect of impacts on the chassis and rest of the car, as well as provide the platform to steer, brake, and drive the car. 
+		The suspension system has 3 major activities, they are analysis, design, and manufacturing. 
+		Analysis focuses on mathematical and practical modeling of vehicle dynamics, and static analysis of loads.
+		Design focuses on computer aided modeling (CAD) primarily done in solidworks.
+		Design works to create designs that can withstand the loads and mount other subsystems, while considering how to manufacture, assemble and test those components.
+		Manufacturing involves actual machining of metal and occasionally composites in order to produce the designs. 
+		Most suspension members are mechanical engineers, and will work in all three areas of the suspension subsystem according to their preference and the system’s need.
+		Zero experience is needed to join the system, but those without CAD or MATLAB experience will have to be somewhat self-driven in initially acquiring those basic skills. 
+		A dedicated member of suspension will learn a great deal in doing realistic design, such as working with systems that have to be able to be manufactured and assembled repeatedly.
+		Those members will then turn around and learn how to manufacture those systems, with experience in machining, welding, and documentation available for those interested. 
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Steering</h2>
+		<p>Steering is a very critical system of the car which allows it to turn, avoid obstacles and simply get the car from point A to point B. 
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Brakes</h2>
+		<p>Brakes are a crucial mechanical component of any vehicle, no matter its application.  
+		Brakes must be designed to stop a vehicle at a moment’s notice, and are one of the most important system in regards to driver safety.
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Chassis</h2>
+		<p>The chassis system is a dual dynamic/static mechanical system that creates the frame which everything else in the car connects to. 
+		The purpose of the chassis is to create a structural platform that is impact resistant and provides secure anchor points for the suspension, steering, brakes, battery box, body, crush zone, and everything else. 
+		The chassis also includes the roll cage that protects the driver against rollovers.
+		The chassis system has 3 major activities, they are analysis, design, and manufacturing. 
+		Analysis focuses on mathematical and practical modeling of vehicle dynamics, and static analysis of loads. 
+		Design focuses on computer aided modeling (CAD) primarily done in solidworks.
+		Design works to create designs that can withstand the loads and mount other subsystems, while considering how to manufacture, assemble and test those components.
+		Manufacturing involves actual machining of metal and occasionally composites in order to produce the designs. 
+		An additional area of work for chassis members interested in pursuing it will be research, and will be conducting extensive testing of composite components for a future composite chassis.
+		Most chassis members are mechanical engineers or materials science majors, and will work in all three areas of the chassis subsystem according to their preference and the system’s need. 
+		Zero experience is needed to join the system, but those without CAD or MATLAB experience will have to be somewhat self-driven in initially acquiring those basic skills. 
+		A dedicated member of chassis will learn a great deal in doing realistic design, such as working with systems that have to be able to be manufactured and assembled repeatedly.
+		Those members will then turn around and learn how to manufacture those systems, with experience in machining, welding, composites, and documentation available for those interested. 
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Battery Pack</h2>
+		<p>Battery pack oversees designing, prototyping and manufacturing a battery pack that will be powered by the solar array as well as provide power to the car. 
+		In addition to that, we design the enclosure and cooling system for the box that will hold the batteries enabling the mechanical team to manufacture it.
+		We also have to individually test each cell and find the internal resistance and capacity.
+		Once we have profiles for each cell, we will plan on how we will group them for each module. 
+		The main challenge of battery pack is manufacturing a design and making sure the pack is balanced, which is why we profile each cell.
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Battery Managment System</h2>
+		<p>The primary function of the Battery Management System (BMS) is to protect the driver and battery pack from unsafe or damaging conditions.
+		The system evaluates the state of the pack by monitoring things such as voltage, current, and temperature of the pack.
+		When unsafe conditions are reached, the BMS responds accordingly by alerting the driver or isolating the battery pack from other electrical systems.
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Maximum Power Point Tracker</h2>
+		<p>MPPT stands for “Maximum Power Point Tracker”.
+		It is a device that takes energy from solar arrays as an input and outputs a constant DC voltage that can be used to charge batteries.
+		A good MPPT is nearly 100% efficient (read about 95% to 99%). 
+		An off-the-shelf MPPT can cost upwards of $700 each. 
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Power Board</h2>
+		<p>The Power Board, from its name, deals with all the power being used by almost every system in the car. 
+		From the lights to the horn, driver ventilation to emergency systems, each piece of the car’s electrical design needs to run through this PCB.
+		It has several specific functions that will be discussed later in this document, including power supply regulation (making sure each system gets the power it needs), startup (turning the car on reliably and safely), and safety (powering emergency systems consistently).
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Telemetry</h2>
+		<p>The telemetry system is the subsystem of the Solar Gator Design Team that deals with information. 
+		The telemetry system takes all the information available from the car that comes from different subsystems and make it available for the drivers as well as transmits it wirelessly to a base. 
+		This information is useful for multiple reasons.
+		A speedometer is useful to make sure the correct speed for minimal energy usage is maintained. 
+		Knowing the temperatures of the solar cells and motors indicates how efficiently systems are being used. 
+		</p>
+		</div>
+		
+		<div class = "systems">
+		<h2>Auxiliary Systems</h2>
+		<p>The Auxiliary Board controls all the signals on the car that are necessary for safety but do not directly affect the car's ability to drive. 
+		This board includes turn signals, brake lights, emergency strobe light, and headlights. 
+		Each of these need to be able to need to be able to turn on and off when the driver interacts with various switches.
+		</p>
+		</div>
+		
+		
+	</div>
 
-<p>this will be a page talking about our club and there will be a sub directory that will explain the systems and their roles </p>
-
-
-
+	
+	<>
+	
+	<>
+	
+	<>
+	
+	<>
+	<div class="footer">
+	
+	
+	</div>
 </body>
-
+</html>
 
 
 
