--- a/app/views/index/events.html.erb
+++ b/app/views/index/events.html.erb
@@ -1,2 +1,5 @@
-
-<p>this will be a page about our club news and activity. this will also display upcoming events.</p>
+<div class="ui container" style="margin: 25vh;">
+  <div class="ui header">
+    Event page coming soon...
+  </div>
+</div>
