--- a/app/views/index/main.html.erb
+++ b/app/views/index/main.html.erb
@@ -16,10 +16,10 @@
   <div class="ui row" style='margin-top:-13vh;'>
     <div class="two wide column"></div>
     <div class="ui row six wide">
-      <%= link_to 'about us', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+      <%= link_to 'about us', about_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
       <%= link_to 'sponsors', sponsors_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
-      <%= link_to 'our team', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
-      <%= link_to 'contact us', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+      <%= link_to 'our team', team_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+      <%= link_to 'contact us', contact_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
     </div>
   </div>
 
@@ -67,7 +67,7 @@
         <div class="four wide column">
           <div class="ui icon header center aligned" style="opacity: 0.75;">
             <i class="users icon"></i>
-              10 sub-engineering teams
+              17 sub-engineering teams
           </div>
         </div>
         <div class="four wide column">
