--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -33,7 +33,7 @@
         </div>
         <div class="two wide column"></div>
         <div class="four wide column" style='margin-top: -3vh;'>
-          <h5 class="ui header left" style='color:white; opacity: 0.8'>Contact us<br />Join us</h5>
+          <h5 class="ui header left" style='color:white; opacity: 0.8'><%= link_to 'Contact us', contact_path, style: 'color:white' %><br />Join us</h5>
         </div>
         <div class="four wide column" style='margin-top: -3vh;'>
           <h5 class="ui header left" style='color:white; opacity: 0.8'>Donate<br /> <%= link_to 'Sponsor Us', sponsors_path, style: 'color:white' %></h5>
