Slight changes to the UI and donate page

--- a/app/views/index/sponsors.html.erb
+++ b/app/views/index/sponsors.html.erb
@@ -28,14 +28,14 @@
 
 <div class="ui grid">
   <div class="ui row centered">
-    <a href="https://www.ufsolargators.org/sponsorship-opportunities/" class="">
+    <%= link_to donate_path do %>
       <div class="ui animated basic blue circular massive button" tabindex="0">
         <div class="visible content">Sponsorship Opportunities</div>
         <div class="hidden content">
           <i class="right arrow icon"></i>
         </div>
       </div>
-    </a>
+    <% end %>
   </div>
   <div class="ui row centered" style='margin-top: 5vh;'>
     <div class="fourteen wide column">
