--- a/app/views/index/team.html.erb
+++ b/app/views/index/team.html.erb
@@ -3,9 +3,16 @@
   <h1 class="sponsor-centered">The Team</h1>
 </div>
 
-<div class="ui container">
+<div class="ui container" style='margin-top: 5vh;'>
   <div class="ui centered grid">
-    
+    <ui class="row">
+      <div class="ui two wide column"></div>
+      <div class="ui twelve wide column">
+        <h1 class="ui dividing header" style='opacity: 0.8'>
+          Officers
+        </hq>
+      </div>
+    </ui>
     <div class="ui row">
       <div class="ui three wide column">
         <div class="ui fluid card">
@@ -71,4 +78,78 @@
       </div>
       </div>
     </div>
+    <ui class="row">
+      <div class="ui two wide column"></div>
+      <div class="ui twelve wide column">
+        <h1 class="ui dividing header" style='opacity: 0.8'>
+          Power Supply Leads
+        </hq>
+      </div>
+    </ui>
+    <div class="ui row">
+      <div class="ui three wide column">
+        <div class="ui fluid card">
+          <div class="image">
+            <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg">
+          </div>
+          <div class="content">
+            <a class="header">Vrushank Desai</a>
+            <div class="meta">
+              <span class="date">Member since 2016</span>
+            </div>
+            <div class="description">
+              Vrushank is an engineering student
+            </div>
+          </div>
+          <div class="extra content">
+            <div class="center aligned author">
+              <strong>President</strong>
+            </div>
+          </div>
+      </div>
+      </div>
+      <div class="ui three wide column">
+        <div class="ui fluid card">
+          <div class="image">
+            <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg">
+          </div>
+          <div class="content">
+            <a class="header">Vrushank Desai</a>
+            <div class="meta">
+              <span class="date">Member since 2016</span>
+            </div>
+            <div class="description">
+              Vrushank is an engineering student
+            </div>
+          </div>
+          <div class="extra content">
+            <div class="center aligned author">
+              <strong>President</strong>
+            </div>
+          </div>
+      </div>
+      </div>
+      <div class="ui three wide column">
+        <div class="ui fluid card">
+          <div class="image">
+            <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg">
+          </div>
+          <div class="content">
+            <a class="header">Vrushank Desai</a>
+            <div class="meta">
+              <span class="date">Member since 2016</span>
+            </div>
+            <div class="description">
+              Vrushank is an engineering student
+            </div>
+          </div>
+          <div class="extra content">
+            <div class="center aligned author">
+              <strong>President</strong>
+            </div>
+          </div>
+      </div>
+      </div>
+    </div>
+  </div>
 </div>
