--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,10 +37,12 @@
       <% end %>
     </div>
     <div class="item">
-      <div class="ui blue button">
-        <i class="flag checkered icon"></i>
-        Join
-      </div>
+      <%= link_to 'https://www.facebook.com/UFSolarGators/' do %>
+        <div class="ui blue button">
+          <i class="flag checkered icon"></i>
+          Join
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
