--- a/app/views/index/about.html.erb
+++ b/app/views/index/about.html.erb
@@ -34,11 +34,10 @@
       </div>
     </div>
   </div>
-  <div class="ui horizontal divider">
+  <!-- <div class="ui horizontal divider">
     MORE ABOUT US
   </div>
   <div class="ui grid middle aligned" style="margin-top: 2vh; margin-bottom: 2vh;">
-
     <div class="ui horizontal segments">
       <div class="ui segment">
         <p>Test</p>
@@ -50,6 +49,5 @@
         <p>Test</p>
       </div>
     </div>
-
-  </div>
+  </div> -->
 </div>
