Added officer images to team view

--- a/app/views/index/team.html.erb
+++ b/app/views/index/team.html.erb
@@ -17,16 +17,16 @@
       <div class="ui three wide column">
         <div class="ui fluid card">
           <div class="image">
-            <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg">
+            <%= image_tag 'president.JPG' %>
           </div>
           <div class="content">
-            <a class="header">Vrushank Desai</a>
+            <a class="header">Stephen Thomas</a>
             <div class="meta">
               <span class="date">Member since 2016</span>
             </div>
-            <div class="description">
+            <!-- <div class="description">
               Vrushank is an engineering student
-            </div>
+            </div> -->
           </div>
           <div class="extra content">
             <div class="center aligned author">
@@ -38,20 +38,20 @@
       <div class="ui three wide column">
         <div class="ui fluid card">
           <div class="image">
-            <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg">
+            <%= image_tag 'vicepresident.JPG' %>
           </div>
           <div class="content">
-            <a class="header">Vrushank Desai</a>
+            <a class="header">Mariana Casas</a>
             <div class="meta">
               <span class="date">Member since 2016</span>
             </div>
-            <div class="description">
+            <!-- <div class="description">
               Vrushank is an engineering student
-            </div>
+            </div> -->
           </div>
           <div class="extra content">
             <div class="center aligned author">
-              <strong>President</strong>
+              <strong>Vice president</strong>
             </div>
           </div>
       </div>
@@ -59,26 +59,70 @@
       <div class="ui three wide column">
         <div class="ui fluid card">
           <div class="image">
-            <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg">
+            <%= image_tag 'treasurer.JPG' %>
           </div>
           <div class="content">
-            <a class="header">Vrushank Desai</a>
+            <a class="header">Nathan Andreo</a>
             <div class="meta">
               <span class="date">Member since 2016</span>
             </div>
-            <div class="description">
+            <!-- <div class="description">
               Vrushank is an engineering student
-            </div>
+            </div> -->
           </div>
           <div class="extra content">
             <div class="center aligned author">
-              <strong>President</strong>
+              <strong>Treasurer</strong>
             </div>
           </div>
       </div>
       </div>
     </div>
-    <ui class="row">
+    <div class="ui row">
+      <div class="ui three wide column">
+        <div class="ui fluid card">
+          <div class="image">
+            <%= image_tag 'secretary.JPG' %>
+          </div>
+          <div class="content">
+            <a class="header">Katie Preiser</a>
+            <div class="meta">
+              <span class="date">Member since 2016</span>
+            </div>
+            <!-- <div class="description">
+              Vrushank is an engineering student
+            </div> -->
+          </div>
+          <div class="extra content">
+            <div class="center aligned author">
+              <strong>Secretary</strong>
+            </div>
+          </div>
+      </div>
+      </div>
+      <div class="ui three wide column">
+        <div class="ui fluid card">
+          <div class="image">
+            <%= image_tag 'business.JPG' %>
+          </div>
+          <div class="content">
+            <a class="header">Kaitlyn Lyons</a>
+            <div class="meta">
+              <span class="date">Member since 2016</span>
+            </div>
+            <!-- <div class="description">
+              Vrushank is an engineering student
+            </div> -->
+          </div>
+          <div class="extra content">
+            <div class="center aligned author">
+              <strong>Business Coordinator</strong>
+            </div>
+          </div>
+      </div>
+      </div>
+    </div>
+    <!-- <ui class="row">
       <div class="ui two wide column"></div>
       <div class="ui twelve wide column">
         <h1 class="ui dividing header" style='opacity: 0.8'>
@@ -150,6 +194,6 @@
           </div>
       </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
