Small changes to images in the website

--- a/app/views/index/about.html.erb
+++ b/app/views/index/about.html.erb
@@ -1,5 +1,5 @@
 <div class="sponsor-container">
-  <%= image_tag 'sponsor_banner', style: 'width: 100%; opacity: 1' %>
+  <%= image_tag 'img1', style: 'width: 100%; opacity: 1' %>
   <h1 class="sponsor-centered">About Us</h1>
 </div>
 
