--- a/app/views/index/sponsors.html.erb
+++ b/app/views/index/sponsors.html.erb
@@ -37,8 +37,17 @@
       </div>
     <% end %>
   </div>
+
   <div class="ui row centered" style='margin-top: 5vh;'>
-    <div class="fourteen wide column">
+    <div class="sixteen wide column">
+      <div class="ui horizontal divider header dash_header">
+          <h1>Cielo Car Sponsors (2019)</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui row centered" style='margin-top: 5vh;'>
+    <div class="thirteen wide column">
       <div class="ui horizontal divider header dash_header">
         <i class="gift icon"></i>
           Platnium Sponsors
