--- a/app/views/index/team.html.erb
+++ b/app/views/index/team.html.erb
@@ -1,5 +1,5 @@
 <div class="sponsor-container">
-  <%= image_tag 'sponsor_banner', style: 'width: 100%; opacity: 1' %>
+  <%= image_tag 'img3', style: 'width: 100%; opacity: 1' %>
   <h1 class="sponsor-centered">The Team</h1>
 </div>
 
