--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <%= favicon_link_tag asset_path('favicon.ico') %>
   <head>
     <title>SolarGators</title>
     <%= csrf_meta_tags %>
